# terminal-games

./: README.md
dice-game/: CMakeLists.txt  README.md
dice-game/src/: main.cpp
guess-a-number/: CMakeLists.txt  README.md  compile_flags.txt
guess_a_number/: CMakeLists.txt
guess_a_number/include/: random_utils.hpp
guess_a_number/src/: main.cpp
rock-paper-scissors/: CMakeLists.txt  README.md
rock-paper-scissors/src/: main.cpp  random_utils.cpp
